apps/finesse-internal/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finesse-internal-backend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: finesse-internal-backend
  template:
    metadata:
      labels:
        app: finesse-internal-backend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: type
                    operator: In
                    values:
                      - app-worker
      containers:
        - name: finesse-internal-backend
          image: ghcr.io/ai-cfia/finesse-backend:main
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args:
            [
              gunicorn --bind :5000 --workers 1 --threads 8 --timeout 0 --forwarded-allow-ips "*" app:app,
            ]
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: tmp
              mountPath: /cachedir_joblib
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: false
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: finesse-internal-backend-svc
spec:
  clusterIP: None
  selector:
    app: finesse-internal-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: api
