apps/finesse-internal/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finesse-internal-backend-ingress
  annotations:
    lbipam.cilium.io/ips: 10.140.79.29
    ingress.cilium.io/loadbalancer-mode: dedicated
spec:
  ingressClassName: cilium
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: finesse-internal-backend-svc
                port:
                  number: 5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finesse-internal-frontend-ingress
  annotations:
    lbipam.cilium.io/ips: 10.140.79.30
    ingress.cilium.io/loadbalancer-mode: dedicated
spec:
  ingressClassName: cilium
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finesse-internal-frontend-svc
                port:
                  number: 3000
